# archiver

./: .dockerignore  .gitignore  CLAUDE.md  Jenkinsfile  Makefile
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
backend/src/main/java/com/icomb/archiver/: ArchiverApplication.java
backend/src/main/java/com/icomb/archiver/config/: StorageConfig.java
backend/src/main/java/com/icomb/archiver/controller/: CatalogueController.java  GlobalExceptionHandler.java  IngestController.java  ProcessorController.java  ViewerController.java
backend/src/main/java/com/icomb/archiver/dto/: EntityHitRequest.java  IngestRecordRequest.java  IngestRecordResponse.java  JobClaimRequest.java  JobCompleteRequest.java  JobFailRequest.java  JobResponse.java  OcrResultRequest.java  PageMetadata.java  PageResponse.java  RecordResponse.java
backend/src/main/java/com/icomb/archiver/model/: Archive.java  Attachment.java  Collection.java  EntityHit.java  Evidence.java  Job.java  Page.java  PageSearch.java  PageText.java  ProcessingRun.java  Record.java  RecordAttribute.java
backend/src/main/java/com/icomb/archiver/repository/: ArchiveRepository.java  AttachmentRepository.java  CollectionRepository.java  JobRepository.java  PageRepository.java  RecordRepository.java
backend/src/main/java/com/icomb/archiver/service/: IngestService.java  JobService.java  StorageService.java
backend/src/main/java/place/icomb/archiver/: ArchiverApplication.java
backend/src/main/java/place/icomb/archiver/config/: JdbcConfig.java  McpTransportConfig.java  ProcessorTokenFilter.java  ProxyAuthFilter.java  SecurityConfig.java  StorageConfig.java  (+1 more)
backend/src/main/resources/: application.yml  czernin-genealogy.txt
backend/src/main/resources/db/migration/: V10__claude_ocr_job_kind.sql  V10__page_person_match.sql  V11__text_chunk_cascade_delete.sql  V12__add_user_lang.sql  V13__add_user_family_tree_person.sql  V14__bge_m3_1024.sql  V15__pipeline_event_admin_reset.sql  V16__qwen3vl_job_kind.sql  V17__person_matching_pipeline.sql  V18__text_chunk_trgm_index.sql  V1__initial_schema.sql  V2__add_record_lang.sql  V3__pdf_and_translation.sql  V4__pipeline_events.sql  V5__add_translating_status.sql  V6__add_source_url.sql  V7__embedding.sql  V8__embed_job_kind.sql  V9__app_user.sql  beforeMigrate.sql
backend/src/test/java/place/icomb/archiver/: TestAuth.java
backend/src/test/resources/: application-test.yml
deploy/: docker-compose.yml
embed-worker/: Dockerfile  pyproject.toml
embed-worker/src/embed_worker/: chunker.py  client.py  config.py  main.py
embed-worker/tests/: test_embed.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: archives.ts  i18n.ts  kept-pages.svelte.ts  types.ts
frontend/src/lib/components/: LanguageSwitcher.svelte  Pagination.svelte  StatusBadge.svelte
frontend/src/lib/messages/: cs.ts  de.ts  en.ts
frontend/src/lib/server/: api.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/admin/audit/: +page.server.ts  +page.svelte
frontend/src/routes/admin/events/: +page.server.ts  +page.svelte
frontend/src/routes/admin/users/: +page.server.ts  +page.svelte
frontend/src/routes/family-tree/: +page.server.ts  +page.svelte
frontend/src/routes/pipeline/: +page.server.ts  +page.svelte
frontend/src/routes/profile/: +page.server.ts  +page.svelte
frontend/src/routes/records/: +page.svelte
frontend/src/routes/records/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/records/[id]/pages/[seq]/: +page.server.ts  +page.svelte
frontend/src/routes/search/: +page.server.ts  +page.svelte
frontend/src/routes/translate/: +page.server.ts  +page.svelte  +server.ts
frontend/tests/: api-types.test.ts  i18n-completeness.test.ts  i18n.test.ts  language-switching.test.ts
ingest-local/: ingest.py
oauth2-proxy-apple/: Dockerfile  apple-entrypoint.sh
ocr-worker-paddle/: .dockerignore  Dockerfile  pyproject.toml
ocr-worker-paddle/src/ocr_worker/: __init__.py  client.py  config.py  main.py  ocr.py
ocr-worker-qwen3vl/: pyproject.toml
ocr-worker-qwen3vl/src/ocr_worker_qwen3vl/: __init__.py  client.py  config.py  main.py  ocr.py
pdf-worker/: Dockerfile  pyproject.toml
pdf-worker/src/pdf_worker/: builder.py  client.py  config.py  main.py
pdf-worker/tests/: test_build_pdf.py
scraper-arolsen/: Dockerfile  pyproject.toml
scraper-arolsen/src/scraper_arolsen/: __init__.py  client.py  config.py  main.py  session.py
scraper-arolsen/tests/: __init__.py
scraper-cz/: Dockerfile  pyproject.toml
scraper-cz/src/scraper_cz/: client.py  config.py  enumerator.py  main.py  progress.py  record.py  search.py  session.py  zoomify.py
scraper-cz/tests/: conftest.py  test_client.py  test_enumerator.py  test_progress.py  test_record.py  test_search.py
scraper-ddb/: Dockerfile  pyproject.toml
scraper-ddb/src/scraper_ddb/: __init__.py  client.py  config.py  main.py  pdf.py  session.py
scraper-ebadatelna/: Dockerfile  pyproject.toml
scraper-ebadatelna/src/scraper_ebadatelna/: client.py  config.py  main.py  session.py
scraper-findbuch/: Dockerfile  pyproject.toml
scraper-findbuch/src/scraper_findbuch/: client.py  config.py  main.py  parser.py  session.py
scraper-matricula/: Dockerfile  pyproject.toml
scraper-matricula/src/scraper_matricula/: client.py  config.py  main.py  session.py
scraper-oesta/: Dockerfile  pyproject.toml
scraper-oesta/src/scraper_oesta/: client.py  config.py  main.py  parser.py  session.py
translate-worker/: Dockerfile  pyproject.toml
translate-worker/src/translate_worker/: api.py  client.py  config.py  main.py  translator.py
web/: Dockerfile  nginx.conf  signin.html  test-endpoints.sh  validate-deploy.sh
worker-common/: pyproject.toml
worker-common/src/worker_common/: __init__.py  client.py  config.py  http.py  loop.py
(+81 files in other folders)
