[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-ebadatelna"
version = "0.1.0"
description = "Scraper for Czech Archive of Security Forces (ebadatelna.cz)"
requires-python = ">=3.13"
dependencies = [
    "worker-common",
    "httpx>=0.27",
    "Pillow>=10.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "responses>=0.25",
]

[project.scripts]
scraper-ebadatelna = "scraper_ebadatelna.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper_ebadatelna"]
