[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-matricula"
version = "0.1.0"
description = "Scraper for Matricula Online church records"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
scraper-matricula = "scraper_matricula.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper_matricula"]
