[project]
name = "translate-worker"
version = "0.1.0"
description = "MarianMT translation worker for the archiver pipeline"
requires-python = ">=3.10"
dependencies = [
    "worker-common",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "torch>=2.0",
    "langdetect>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
